--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,7 @@ transformers = "^4.41.1"
 numpy = "^1.26.4"
 pandas = "^2.2.2"
 scikit-learn = "^1.5.0"
-click = "^8.1.7"
-
+prompt-toolkit = "^3.0.45"
 
 [build-system]
 requires = ["poetry-core"]
