--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ transformers = "^4.41.1"
 numpy = "^1.26.4"
 pandas = "^2.2.2"
 scikit-learn = "^1.5.0"
-prompt-toolkit = "^3.0.45"
+typer = "^0.12.3"
+rich = "^13.7.1"
 
 [build-system]
 requires = ["poetry-core"]
